<resources>
    <string name="app_name">Last Joke</string>
    <string name="teststring">Lorem ipsum dolor sit amet, sapien etiam, nunc amet dolor ac odio mauris justo. Luctus arcu, urna praesent at id  eget.</string>
    <string name="addJokeTalk">Hey Dude , I know u are funny but they dont ,so lets add some jokes to prove :D</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>

    <string name="seejokes">See jokes</string>
    <string name="show_jokes">Show Jokes</string>
    <string name="joke_language">Joke language</string>
    <string name="lang_defValue">Bothِ</string>
    <string name="key_jokesLanguage">listJokeLanguages</string>
    <string name="joke_notification">Joke Notification</string>
    <string name="key_joke_notification">key_joke_notification</string>
    <string name="key_notification_timer">notificationTimer</string>

    <string name="timer_defult_value">30</string>
    <string name="arabic">Arabic</string>
    <string name="english">English</string>
    <string name="notvalid_joke_txt">Its too short dude its not even a Joke</string>
</resources>
